<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nith</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="aboutus">About Us</string>
    <string name="refresh">Refresh</string>
    <string name="contacts">Contacts</string>
    <string name="group_title">Select Group</string>
    <string name="aboutText">This android application aims to provide digital portal to all the students of the college. The project as a whole is still in Alpha development stage and requires lot of debugging and suggestions.\n\nYour suggestions are very valuable to us in improving this project as a whole and will be highly appreciated.</string>
    <string name="dev1">Pranav Kant</string>
    <string name="dev2">Giriraj Sharma</string>
    <string name="dev1phone">+919736781917</string>
    <string name="dev2phone">+919882255607</string>
    <string name="dev1email">pranav913@gmail.com</string>
    <string name="dev2email">giriraj.sharma27@gmail.com</string>
    <string name="hostingThanks">We thank GLUG-NITH for providing hosting services at this stage of development of the application.\n(http://glug.nith.ac.in)</string>
	
    
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
</resources>