<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dev1"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dev1phone"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dev1email"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <View style="@style/Divider"/>
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dev2"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dev2phone"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dev2email"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
      <View style="@style/Divider"/>
      
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:padding="20dp"
        android:text="@string/hostingThanks"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
</LinearLayout>

</ScrollView>